app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-gin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-gin
  template:
    metadata:
      labels:
        app: go-gin
    spec:
      containers:
        - name: go-gin
          image: myapp:v1
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: go-gin
spec:
  selector:
    app: go-gin
  ports:
    - port: 80
      targetPort: 8080
